Converted MarkovGraph.Vertex to use an internal float array instead of a map of maps. This should cut down on total memory usage. Worked making FeatureClusterer use a thread pool for certain operations on MarkovGraphs that can be parallelized. Figured out why the multi-threaded version of FeatureClusterer was hanging for 5 seconds every so often (single-threaded GC). Switch to using parallel garbage collector
git-svn-id: https://database.cs.brown.edu/svn/hstore/branches/markov-branch@1849 7a8f3d5b-8c5f-44cb-9125-2414a256df87